[gd_scene format=3 uid="uid://de35pa8bnxb8p"]

[ext_resource type="Script" uid="uid://dhcc8iewmw8sm" path="res://UI/ui.gd" id="1_2fwl4"]
[ext_resource type="Texture2D" uid="uid://dfmjipuji2ake" path="res://UI/Assets/cooldown.png" id="2_dajm1"]

[node name="UI" type="CanvasLayer" unique_id=611071202]
script = ExtResource("1_2fwl4")

[node name="TooCloseLabel" type="Label" parent="." unique_id=1095879502]
modulate = Color(1, 0, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -163.5
offset_top = -31.0
offset_right = 163.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "You can't spawn your monsters that close."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnUI" type="Control" parent="." unique_id=520895]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = -15.0
grow_vertical = 0

[node name="MonsterIcon" type="TextureRect" parent="SpawnUI" unique_id=894228064]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="CooldownOverlay" type="TextureProgressBar" parent="SpawnUI" unique_id=1203380192]
modulate = Color(1, 1, 1, 0.11764706)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5
radial_initial_angle = 90.0
texture_progress = ExtResource("2_dajm1")

[node name="CooldownLabel" type="Label" parent="SpawnUI" unique_id=2058895717]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
